--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,34 +1,43 @@
-# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
+name: Java CI with Maven
 
-name: Maven Package
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
 
 on:
-  release:
-    types: [created]
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+      - uses: actions/checkout@v3
+      - name: Set up JDK 18
+        uses: actions/setup-java@v3
+        with:
+          java-version: '18'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
 
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      - name: Move artifact
+        run: |
+          artifact=$(find target -name 'Announcer-*.jar' -print -quit)
+          if [ -n "$artifact" ]; then
+            echo "Moving artifact: $artifact to target/Announcer.jar"
+            mv "$artifact" target/Announcer.jar
+          else
+            echo "No matching artifact found"
+            exit 1
+          fi
+        shell: bash
 
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+      - name: Upload moved artifact
+        uses: actions/upload-artifact@v3
+        with:
+          path: target/Announcer.jar
+          name: Announcer.jar
